<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/ApplicationPrimary"
        android:padding="4dp"
        android:text="@string/maplevel_dialog_ZoomlevelWGSTitle"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/example_maplevel_latitude"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ZoomWGS_Latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/example_maplevel_longitude"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ZoomWGS_Longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/example_maplevel_zoomlevel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ZoomWGS_Zoomlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ZoomWGS_Accept"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/ApplicationSecondary"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ZoomWGS_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/ApplicationSecondary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>