<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/ApplicationPrimary"
        android:padding="4dp"
        android:text="@string/maplevel_dialog_WgsLcatTitle"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/example_maplevel_latitude"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/WGSDialog_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/example_maplevel_longitude"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/WGSDialog_Longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/WGSDialog_Accept"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/ApplicationSecondary"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/WGSDialog_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/ApplicationSecondary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>