<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/ApplicationPrimary"
        android:padding="4dp"
        android:text="@string/maplevel_dialog_ZoomlevelTitle"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/MapLevelDialog_LevelValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/MapLevelDialog_LevelSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:max="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MapLevelDialog_Accept"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/ApplicationSecondary"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/MapLevelDialog_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/ApplicationSecondary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>